# unistayapi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_REFERENCE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  schema.sql  supabase_schema.sql
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_07_10_1414-2f0652c6fde1_initial_schema.py  2026_07_10_1425-6b380577949e_add_otps_table.py  2026_07_10_2038-9f8c7b6d5e4a_add_payment_type_to_payments.py  2026_07_10_2045-3a1b2c4d5e6f_geo_module.py  2026_07_10_2218-332247adf24d_add_email_verified.py  2026_07_11_1053-0e900f058b3d_drop_unused_ad_slides.py  2026_07_11_1156-a71ae1e8ec58_add_soft_delete_to_houses.py  2026_07_14_1255-6f3a9c2e8d4b_add_user_id_and_last_event_id_to_payments.py  2026_07_15_1305-9b8d6f4a2c13_add_receipt_sent_at_to_payments.py  2026_07_15_1740-e3c7a9b6d2f1_align_payment_and_otp_schema.py
app/: config.py  db_types.py  dependencies.py  exceptions.py  geo.py  logging_config.py  main.py  providers.py  rate_limit.py  seed.py
app/clients/: cloudinary_client.py  google_maps_client.py  lenco_client.py
app/models/: __init__.py  ad_slide.py  (+15 more)
scripts/: capture_api_responses.py  diagnose_cloudinary.py  render_deploy_check.py  test_app_upload.py  test_maps_after_billing.py
tests/: conftest.py  test_auth.py  test_bookings.py  test_email_otp.py  test_favorites.py  test_geo.py  test_houses.py  test_images.py  test_landlords.py  test_logging.py  test_notifications.py  test_payments.py  test_postgis_integration.py  test_universities.py  test_users.py
(+55 files in other folders)
